--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,17 +2,21 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.166.1/containers/python-3
 {
 	"name": "netacea-log-generator",
-	"build": {
-		"dockerfile": "Dockerfile",
-		"context": "..",
-		"args": { 
-			// Update 'VARIANT' to pick a Python version: 3, 3.6, 3.7, 3.8, 3.9
-			"VARIANT": "3.9",
-			// Options
-			"INSTALL_NODE": "false",
-			"NODE_VERSION": "lts/*"
-		}
-	},
+	"dockerComposeFile": "docker-compose.yml",
+	"shutdownAction": "stopCompose",
+	"workspaceFolder": "/workspace",
+	"service": "log-generator",
+	// "build": {
+	// 	"dockerfile": "Dockerfile",
+	// 	"context": "..",
+	// 	"args": { 
+	// 		// Update 'VARIANT' to pick a Python version: 3, 3.6, 3.7, 3.8, 3.9
+	// 		"VARIANT": "3.9",
+	// 		// Options
+	// 		"INSTALL_NODE": "false",
+	// 		"NODE_VERSION": "lts/*"
+	// 	}
+	// },
 
 	// Set *default* container specific settings.json values on container create.
 	"settings": { 
@@ -35,7 +39,8 @@
 	"extensions": [
 		"ms-python.python",
 		"ms-python.vscode-pylance",
-		"njpwerner.autodocstring"
+		"njpwerner.autodocstring",
+		"jeppeandersen.vscode-kafka",
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
