--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,10 @@
-click==7.1.2
-typer==0.3.2
 boto3==1.17.57
 botocore==1.20.57
 click==7.1.2
+confluent-kafka==1.6.1
+crc32c==2.2
 jmespath==0.10.0
-python-dateutil==2.8.1
-s3transfer==0.4.2
-six==1.15.0
-typer==0.3.2
-urllib3==1.26.4
-boto3==1.17.57
-botocore==1.20.57
-click==7.1.2
-jmespath==0.10.0
+kafka-python==2.0.2
 python-dateutil==2.8.1
 s3transfer==0.4.2
 six==1.15.0
