Add --version flag Add apache log generator Add base class for all log generators Give cmak a container name

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -51,6 +51,7 @@ services:
 
   kafka_manager:
     image: hlebalbau/kafka-manager:stable
+    container_name: cmak
     ports:
       - "9000:9000"
     environment:
