--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ botocore==1.20.57
 click==7.1.2
 confluent-kafka==1.6.1
 crc32c==2.2
+Faker==8.1.1
 jmespath==0.10.0
 kafka-python==2.0.2
 python-dateutil==2.8.1
 s3transfer==0.4.2
 six==1.15.0
+text-unidecode==1.3
 typer==0.3.2
 urllib3==1.26.4
