--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
+aiohttp==3.7.4.post0
+async-timeout==3.0.1
+attrs==20.3.0
 boto3==1.17.57
 botocore==1.20.57
+chardet==4.0.0
 click==7.1.2
 confluent-kafka==1.6.1
 crc32c==2.2
 Faker==8.1.1
+idna==3.1
 jmespath==0.10.0
 kafka-python==2.0.2
+multidict==5.1.0
 python-dateutil==2.8.1
 s3transfer==0.4.2
 six==1.15.0
 text-unidecode==1.3
 typer==0.3.2
+typing-extensions==3.7.4.3
 urllib3==1.26.4
+yarl==1.6.3
