--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ async-timeout==3.0.1
 attrs==20.3.0
 boto3==1.17.57
 botocore==1.20.57
+cachetools==4.2.2
 chardet==4.0.0
 click==7.1.2
 confluent-kafka==1.6.1
