--- a/requirements.txt
+++ b/requirements.txt
@@ -3,18 +3,28 @@ async-timeout==3.0.1
 attrs==20.3.0
 boto3==1.17.57
 botocore==1.20.57
+cachetools==4.2.2
+certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 confluent-kafka==1.6.1
 crc32c==2.2
 Faker==8.1.1
+h11==0.12.0
+h2==3.2.0
+hpack==3.0.0
+httpcore==0.13.0
+httpx==0.18.0
+hyperframe==5.2.0
 idna==3.1
 jmespath==0.10.0
 kafka-python==2.0.2
 multidict==5.1.0
 python-dateutil==2.8.1
+rfc3986==1.4.0
 s3transfer==0.4.2
 six==1.15.0
+sniffio==1.2.0
 text-unidecode==1.3
 typer==0.3.2
 typing-extensions==3.7.4.3
