--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ hyperframe==5.2.0
 idna==3.1
 jmespath==0.10.0
 kafka-python==2.0.2
+loguru==0.5.3
 multidict==5.1.0
 python-dateutil==2.8.1
 rfc3986==1.4.0
@@ -26,6 +27,7 @@ s3transfer==0.4.2
 six==1.15.0
 sniffio==1.2.0
 text-unidecode==1.3
+tqdm==4.60.0
 typer==0.3.2
 typing-extensions==3.7.4.3
 urllib3==1.26.4
