--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -42,6 +42,7 @@
 		"ms-python.vscode-pylance",
 		"njpwerner.autodocstring",
 		"jeppeandersen.vscode-kafka",
+		"bierner.github-markdown-preview"
 	],
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
