--- a/requirements.txt
+++ b/requirements.txt
@@ -17,8 +17,10 @@ httpcore==0.13.0
 httpx==0.18.0
 hyperframe==5.2.0
 idna==3.1
+isort==5.8.0
 jmespath==0.10.0
 kafka-python==2.0.2
+loguru==0.5.3
 multidict==5.1.0
 python-dateutil==2.8.1
 rfc3986==1.4.0
@@ -31,4 +33,4 @@ typer==0.3.2
 typing-extensions==3.7.4.3
 urllib3==1.26.4
 yarl==1.6.3
-loguru==0.5.3
+zstandard==0.15.2
